--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
       <div>
         <form id="personForm">
           <p>
-
             <label for="personName">Name</label>
             <input type="text" name="personName">
           </p
           <p>
+            <label for="age"></label>
+            Enter your age: <input type="number" name="age" min='1' max='100'><br>
+          </p>
+          <p>
             <button type="submit">Go</button>
           </p>
+
         </form>
       </div>
     </section>
