Clean and reorganize code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js">
+
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="utf-8">
@@ -8,6 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
+
   <body>
     <h1>a Factory of People</h1>
 
@@ -19,21 +21,21 @@
             <input type="text" name="personName">
           </p>
           <p>
-            <label for="age"></label>
-            Enter your age: <input type="number" name="age" min='1' max='100'><br>
-          <p>
-            <button type="submit">Go</button>
-          </p>
-          <p id ='blank'></p>
-        </form>
-          <form id="size">
-            <p id="sizeChange">
-              Change the font size of this.
+            <label for="age"></label> Enter your age: <input type="number" name="age" min='1' max='100'><br>
+            <p>
+              <button type="submit">Go</button>
             </p>
-            <button type="submit">Increase Size</button>
-          </form>
+            <p id='blank'></p>
+        </form>
+        <form id="size">
+          <p id="sizeChange">
+            Change the font size of this.
+          </p>
+          <button type="submit">Increase Size</button>
+        </form>
       </div>
     </section>
     <script src="index.js"></script>
   </body>
+
 </html>
