--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <button type="submit">Increase Size</button>
         </form>
       </div>
+      <div id="details">
+
+      </div>
     </section>
     <script src="index.js"></script>
   </body>
