--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html class="no-js">
 
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>People Factory</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
 
   <body>
