--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             <label for="personName">Name</label>
             <input type="text" name="personName">
           </p>
+
           <p>
-            <label for="age"></label> Enter your age: <input type="number" name="age" min='1' max='100'><br>
+            <label for="favoriteColor">Favorite Color</label>
+            <input type="color" name="favoriteColor">
+          </p>
+
+          <p>
+            <label for="age"></label> Age: <input type="number" name="age" min='1' max='100'><br>
             <p>
               <button type="submit">Go</button>
             </p>
